feat: adiciona a explicação do XP

--- a/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
+++ b/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
@@ -4,7 +4,7 @@
 
 Conforme destacado por Sommerville (2018)¹, o projeto de arquitetura desempenha um papel fundamental no desenvolvimento de software, atuando como o estágio inicial do processo. Nesse estágio são identificados os principais componentes estruturais do sistema e seus relacionamentos, resultando em um modelo de arquitetura que descreve como o sistema será organizado.
 
-A escolha metodológica nesse contexto é um fator crucial, pois influencia diretamente na forma como a arquitetura será projetada e implementada, podendo impactar significativamente na qualidade e no sucesso do projeto de software. Dessa forma, no seguinte projeto, serão adotados elementos das seguintes ferramentas e metodologias: Scrum, XP (Extreme Programming), BPMN (Business Process Model and Notation) e Conventional Commits.
+A escolha metodológica nesse contexto é um fator crucial, pois influencia diretamente na forma como a arquitetura será projetada e implementada, podendo impactar significativamente na qualidade e no sucesso do projeto de software. Dessa forma, no seguinte projeto, serão adotados elementos das seguintes ferramentas e metodologias: Scrum, XP (Extreme Programming) e Conventional Commits.
 
 # Scrum
 
@@ -15,3 +15,7 @@ Conforme Fábio Cruz (2013)², as sprints são compostas por cerimônias do Scru
 No projeto em questão, optou-se por uma abordagem adptada do Scrum, adotando os seguintes elementos: Sprint Planning, Sprint Backlog e Sprint Review. Para mais detalhes sobre como essas cerimônias foram alocadas no decorrer da sprint, acessar o artefato [BPMN (Business Process Model and Notation)]().
 
 # XP (Extreme Programming)
+
+O XP ou Extreme Programming é um processo de desenvolvimento voltado para projetos com requisitos vagos e que mudam com frequência, com desenvolvimento incremental e preferencialmente com equipes pequenas de até 12 desenvolvedores. Ele é estruturado em um conjunto de práticas e valores que funcionam de maneira harmoniosa para garantir um alto retorno do investimento em software para o cliente. Dentro do XP, quatro valores fundamentais orientam o desenvolvimento de software: feedback, comunicação, simplicidade e coragem. Entre as práticas incluídas no XP estão: cliente presente, jogo do planejamento, stand up meeting, programação em par, desenvolvimento guiado pelos testes, refactoring, código coletivo, código padronizado, design simples, metáfora, ritmo sustentável, integração contínua e releases curtos (VINÍCIUS MANHÃES TELES, 2017)³.
+
+No seguinte projeto, optou-se por adaptar a prática programação em pares e utilizá-la no decorrer da sprint. Para mais detalhes de como a Execução em pares será abordada durante o andamento da sprint, acessar o artefato [BPMN (Business Process Model and Notation)]().
