feat: adiciona as políticas de branchs e commits

--- a/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
+++ b/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
@@ -19,3 +19,48 @@ No projeto em questão, optou-se por uma abordagem adptada do Scrum, adotando os
 O XP ou Extreme Programming é um processo de desenvolvimento voltado para projetos com requisitos vagos e que mudam com frequência, com desenvolvimento incremental e preferencialmente com equipes pequenas de até 12 desenvolvedores. Ele é estruturado em um conjunto de práticas e valores que funcionam de maneira harmoniosa para garantir um alto retorno do investimento em software para o cliente. Dentro do XP, quatro valores fundamentais orientam o desenvolvimento de software: feedback, comunicação, simplicidade e coragem. Entre as práticas incluídas no XP estão: cliente presente, jogo do planejamento, stand up meeting, programação em par, desenvolvimento guiado pelos testes, refactoring, código coletivo, código padronizado, design simples, metáfora, ritmo sustentável, integração contínua e releases curtos (VINÍCIUS MANHÃES TELES, 2017)³.
 
 No seguinte projeto, optou-se por adaptar a prática programação em pares e utilizá-la no decorrer da sprint. Para mais detalhes de como a Execução em pares será abordada durante o andamento da sprint, acessar o artefato [BPMN (Business Process Model and Notation)]().
+
+# Política de Commits
+
+Com o objetivo de aprimorar a organização e a rastreabilidade do projeto, optou-se por utilizar o Conventional Commits⁴, que é uma convenção para estruturar e padronizar as mensagens de commit em repositórios de controle de versão.
+
+As mensagens de commit são formatadas de acordo com um conjunto de regras predefinidas, seguindo o seguinte padrão:
+
+#### Estrutura da Mensagem de Commit:
+
+```
+<tipo>[escopo opcional]: <descrição>
+
+[corpo opcional]
+
+[rodapé(s) opcional(is)]
+```
+
+#### Tipos de Commits:
+
+- feat - cria um novo recurso no código.
+- fix - corrige um bug no código.
+- style - mudanças que não afetam o significado do código
+- refactor - uma alteração que não corrige um bug, nem adiciona um novo recurso.
+- test - adicionando testes ausentes ou corrigindo testes existentes.
+- docs - apenas a documentação.
+- chore - alterações no processo de compilação ou ferramentas e bibliotecas auxiliares, como geração de documentação.
+- perf - udança de Código que melhora performance.
+- build - alterações que afetam o sistema de compilação ou dependências externas (npm, gulp, broccoli).
+- ci - alterações em nossos arquivos e scripts de configuração de CI (Travis, Circle, github actions).
+
+# Política de Branchs
+
+A criação de branchs deverão seguir o padrão:
+
+```
+<tipo>/descrição
+```
+
+#### Tipos de Branchs:
+
+As branchs serão divididas em 3 tipos: feat, fix e refactor.
+
+- feat - branch que cria um novo recurso.
+- fix - branch que corrige algum problema ou erro existente no código.
+- refactor - branch que modifica elementos já existentes, mas não corrige e nem adiciona um novo recurso.
