feat: adiciona a bibliografia e o histórico de versão

--- a/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
+++ b/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
@@ -2,27 +2,27 @@
 
 # Metodologia Adotada
 
-Conforme destacado por Sommerville (2018)¹, o projeto de arquitetura desempenha um papel fundamental no desenvolvimento de software, atuando como o estágio inicial do processo. Nesse estágio são identificados os principais componentes estruturais do sistema e seus relacionamentos, resultando em um modelo de arquitetura que descreve como o sistema será organizado.
+Conforme destacado por Sommerville (2018)[¹](#ancora1), o projeto de arquitetura desempenha um papel fundamental no desenvolvimento de software, atuando como o estágio inicial do processo. Nesse estágio são identificados os principais componentes estruturais do sistema e seus relacionamentos, resultando em um modelo de arquitetura que descreve como o sistema será organizado.
 
 A escolha metodológica nesse contexto é um fator crucial, pois influencia diretamente na forma como a arquitetura será projetada e implementada, podendo impactar significativamente na qualidade e no sucesso do projeto de software. Dessa forma, no seguinte projeto, serão adotados elementos das seguintes ferramentas e metodologias: Scrum, XP (Extreme Programming) e Conventional Commits.
 
 # Scrum
 
-O Scrum, segundo Fábio Cruz (2013)², é um _framework_ amplamente utilizado no gerenciamento de projetos ágeis. Embora frequentemente associado ao desenvolvimento de software, sua flexibilidade o torna applicável a qualquer tipo de produto. Uma de suas características distintivas é sua abordagem iterativa e incremental. No âmbito do Scrum, os projetos são divididos em ciclos curtos e repetitivos, conhecidos como "Sprints". As sprints, que geralmente possuem uma duração de duas a quatro semanas, possibilitam a adaptação e correção de desvios a cada iteração.
+O Scrum, segundo Fábio Cruz (2013)[²](#ancora2), é um _framework_ amplamente utilizado no gerenciamento de projetos ágeis. Embora frequentemente associado ao desenvolvimento de software, sua flexibilidade o torna applicável a qualquer tipo de produto. Uma de suas características distintivas é sua abordagem iterativa e incremental. No âmbito do Scrum, os projetos são divididos em ciclos curtos e repetitivos, conhecidos como "Sprints". As sprints, que geralmente possuem uma duração de duas a quatro semanas, possibilitam a adaptação e correção de desvios a cada iteração.
 
-Conforme Fábio Cruz (2013)², as sprints são compostas por cerimônias do Scrum e incluem: A Sprint Planning, na qual são definidas as metas e tarefas da sprint. A Sprint Backlog, que registra as tarefas específicas a serem executadas na sprint atual. A Sprint Review, que verifica se os artefatos realizados estão satisfatórios. A Sprint Retrospective, que acontece após a revisão e permite a equipe analisar o que funcionou bem e o que pode ser melhorado. E finalmente, a Daily Scrum, que é uma reunião curta e diária para compartilhar o progresso da sprint.
+Conforme Fábio Cruz (2013)[²](#ancora2), as sprints são compostas por cerimônias do Scrum e incluem: A Sprint Planning, na qual são definidas as metas e tarefas da sprint. A Sprint Backlog, que registra as tarefas específicas a serem executadas na sprint atual. A Sprint Review, que verifica se os artefatos realizados estão satisfatórios. A Sprint Retrospective, que acontece após a revisão e permite a equipe analisar o que funcionou bem e o que pode ser melhorado. E finalmente, a Daily Scrum, que é uma reunião curta e diária para compartilhar o progresso da sprint.
 
 No projeto em questão, optou-se por uma abordagem adptada do Scrum, adotando os seguintes elementos: Sprint Planning, Sprint Backlog e Sprint Review. Para mais detalhes sobre como essas cerimônias foram alocadas no decorrer da sprint, acessar o artefato [BPMN (Business Process Model and Notation)]().
 
 # XP (Extreme Programming)
 
-O XP ou Extreme Programming é um processo de desenvolvimento voltado para projetos com requisitos vagos e que mudam com frequência, com desenvolvimento incremental e preferencialmente com equipes pequenas de até 12 desenvolvedores. Ele é estruturado em um conjunto de práticas e valores que funcionam de maneira harmoniosa para garantir um alto retorno do investimento em software para o cliente. Dentro do XP, quatro valores fundamentais orientam o desenvolvimento de software: feedback, comunicação, simplicidade e coragem. Entre as práticas incluídas no XP estão: cliente presente, jogo do planejamento, stand up meeting, programação em par, desenvolvimento guiado pelos testes, refactoring, código coletivo, código padronizado, design simples, metáfora, ritmo sustentável, integração contínua e releases curtos (VINÍCIUS MANHÃES TELES, 2017)³.
+O XP ou Extreme Programming é um processo de desenvolvimento voltado para projetos com requisitos vagos e que mudam com frequência, com desenvolvimento incremental e preferencialmente com equipes pequenas de até 12 desenvolvedores. Ele é estruturado em um conjunto de práticas e valores que funcionam de maneira harmoniosa para garantir um alto retorno do investimento em software para o cliente. Dentro do XP, quatro valores fundamentais orientam o desenvolvimento de software: feedback, comunicação, simplicidade e coragem. Entre as práticas incluídas no XP estão: cliente presente, jogo do planejamento, stand up meeting, programação em par, desenvolvimento guiado pelos testes, refactoring, código coletivo, código padronizado, design simples, metáfora, ritmo sustentável, integração contínua e releases curtos (VINÍCIUS MANHÃES TELES, 2017)[³](#ancora3).
 
 No seguinte projeto, optou-se por adaptar a prática programação em pares e utilizá-la no decorrer da sprint. Para mais detalhes de como a Execução em pares será abordada durante o andamento da sprint, acessar o artefato [BPMN (Business Process Model and Notation)]().
 
 # Política de Commits
 
-Com o objetivo de aprimorar a organização e a rastreabilidade do projeto, optou-se por utilizar o Conventional Commits⁴, que é uma convenção para estruturar e padronizar as mensagens de commit em repositórios de controle de versão.
+Com o objetivo de aprimorar a organização e a rastreabilidade do projeto, optou-se por utilizar o Conventional Commits[⁴](#ancora4), que é uma convenção para estruturar e padronizar as mensagens de commit em repositórios de controle de versão.
 
 As mensagens de commit são formatadas de acordo com um conjunto de regras predefinidas, seguindo o seguinte padrão:
 
@@ -54,7 +54,7 @@ As mensagens de commit são formatadas de acordo com um conjunto de regras prede
 A criação de branchs deverão seguir o padrão:
 
 ```
-<tipo>/descrição
+<tipo>/<descrição>
 ```
 
 #### Tipos de Branchs:
@@ -64,3 +64,16 @@ As branchs serão divididas em 3 tipos: feat, fix e refactor.
 - feat - branch que cria um novo recurso.
 - fix - branch que corrige algum problema ou erro existente no código.
 - refactor - branch que modifica elementos já existentes, mas não corrige e nem adiciona um novo recurso.
+
+# Bibliografia
+
+> <a id="ancora1"></a> 1. SOMMERVILLE, I. Software engineering. 10. ed. [s.l.] Boston, Mass. Amsterdam Cape Town Pearson Education Limited, 2016.  
+> <a id="ancora2"></a> 2. CRUZ, F. Scrum e PMBOK unidos no Gerenciamento de Projetos. [s.l.] Brasport, [s.d.].  
+> <a id="ancora3"></a> 3. VINÍCIUS MANHÃES TELES. Extreme Programming. [s.l.] Novatec Editora, 2017.  
+> <a id="ancora4"></a> 4. CONVENTIONAL Commits. Conventional Commits. Disponível em: <https://www.conventionalcommits.org/pt-br/v1.0.0/#especificação/>. Acesso em: 15 set. 2021.
+
+# Histórico de Versões
+
+| Versão | Data       | Descrição            | Autor(es)                                           | Revisor(es) |
+| ------ | ---------- | -------------------- | --------------------------------------------------- | ----------- |
+| `1.0`  | 15/09/2023 | Criação do documento | [Maciel Júnior](https://github.com/macieljuniormax) |             |
