--- a/docs/Base/1.1.3.causa-efeito.md
+++ b/docs/Base/1.1.3.causa-efeito.md
@@ -6,7 +6,7 @@ O Diagrama de Causa e Efeito, ou de Ishikawa, é uma ferramenta desenvolvida por
 
 O entrave principal utilizado como efeito para a confecção do diagrama foi levantado pelo artefato de 5W2H, no qual foi analisado o problema de visualização das informações necessárias do produto. Além disso, os léxicos foram utilizados para compreender as relações do usuário e das ações envolvidas no processo de visualização de um produto.
 
-Portanto, visando à compreensão da vicissitude definida, os dois integrantes do grupo [Arthur de Melo](https://github.com/arthurmlv) e [Douglas Alves](https://github.com/dougalvs) levantaram diversas causas iniciais para tal efeito. A partir dessas causas, distribuiu-se cada uma em uma das quatro categorias de acordo com a característica da causa. Por fim, por meio das causas iniciais, ocorreu o desdobramento a fim de levantar causas mais específicas.
+Portanto, visando à compreensão da vicissitude definida, os dois integrantes do grupo [Arthur de Melo](https://github.com/arthurmlv) e [Douglas Alves](https://github.com/dougalvs) levantaram diversas causas iniciais para tal efeito. A partir dessas causas, distribuiu-se cada uma em uma das quatro categorias de acordo com a característica da causa. Por fim, por meio das causas iniciais, ocorreu o desdobramento a fim de levantar causas mais específicas. A produção do artefato foi feita durante reunião via Discord por meio da plataforma Miro.
 
 ## Diagrama 
 
@@ -17,7 +17,7 @@ Portanto, visando à compreensão da vicissitude definida, os dois integrantes d
 Figura 1 - Diagrama Causa-Efeito
 
 <p align="center">
-    <a href="../assets/diagrama-causa-efeito.png"><img src="../assets/diagrama-causa-efeito.png" alt="Diagrama Causa-Efeito" width="1000"/></a></br>
+    <a href="assets/diagrama-causa-efeito.png"><img src="assets/diagrama-causa-efeito.png" alt="Diagrama Causa-Efeito" width="1000"/></a></br>
 </p>
 
 <font>Fonte: [Arthur de Melo](https://github.com/arthurmlv) e [Douglas Alves](https://github.com/dougalvs), 2023</font>
@@ -30,9 +30,9 @@ Dado que grande parte da dificuldade para encontrar informações de uma mercado
 
 ## Referências Bibliográficas
 
-> <a id="REF1" href="#anchor_1">1.</a> LINS, B. F. E. Ferramentas básicas da qualidade. Ciência da Informação, [S. l.], v. 22, n. 2, 1993. DOI: 10.18225/ci.inf.v22i2.502. Disponível em: https://revista.ibict.br/ciinf/article/view/502. Acesso em: 12 set. 2023.
+> 1. LINS, B. F. E. Ferramentas básicas da qualidade. Ciência da Informação, [S. l.], v. 22, n. 2, 1993. DOI: 10.18225/ci.inf.v22i2.502. Disponível em: https://revista.ibict.br/ciinf/article/view/502. Acesso em: 12 set. 2023.
 
-> <a id="REF2" href="#anchor_2">2.</a> Diagrama de Ishikawa (Ferramenta da Qualidade): Teoria + Exemplo Prático. Disponível em: <https://youtu.be/U-0qzmFqH-0>. Acesso em: 12 set. 2023.
+> 2. Diagrama de Ishikawa (Ferramenta da Qualidade): Teoria + Exemplo Prático. Disponível em: <https://youtu.be/U-0qzmFqH-0>. Acesso em: 12 set. 2023.
 
 ## Histórico de Versões
 
@@ -40,3 +40,4 @@ Dado que grande parte da dificuldade para encontrar informações de uma mercado
 | ------ | ---------- | -------------------------------------------- | ------------------------------------------------ | ------------------------------------------------ |
 | `1.0`  | 12/09/2023 | Criação do diagrama.                           | [Arthur de Melo](https://github.com/arthurmlv) e [Douglas Alves](https://github.com/dougalvs) | [Sidney Fernando](https://github.com/nando3d3) |
 | `1.1`  | 12/09/2023 | Detalhamento da metodologia e conclusão.             | [Arthur de Melo](https://github.com/arthurmlv) | [Sidney Fernando](https://github.com/nando3d3) |
+| `1.2`  | 15/09/2023 | Correção da imagem do diagrama.             | [Arthur de Melo](https://github.com/arthurmlv) | [Sidney Fernando](https://github.com/nando3d3) |
