fix: corrige revisores plano de risco e tempo
issue: https://github.com/UnBArqDsw2023-2/2023.2_G7_ProjetoMagazineLuiza/issues/6

--- a/docs/Base/1.1.6.plano-risco-tempo.md
+++ b/docs/Base/1.1.6.plano-risco-tempo.md
@@ -10,7 +10,7 @@ O objetivo desse plano de gerenciamento de riscos é maximizar as probabilidade/
 
 ### Participantes
 
-Os participantes responsáveis por elaborar esse plano de risco foram os integrantes do grupo [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3). A revisão desse artefato ficou a cargo dos integrantes do mesmo grupo, Fulano e Ciclano.
+Os participantes responsáveis por elaborar esse plano de risco foram os integrantes do grupo [Matheus Henrique](https://github.com/mathonaut) e [Sidney Fernando](https://github.com/nando3d3). A revisão desse artefato ficou a cargo dos integrantes do mesmo grupo, [Arthur de Melo](https://github.com/arthurmlv) e [Douglas Alves](https://github.com/dougalvs).
 
 A tabela 1 a seguir apresenta a relação de cada participante com os artefatos produzidos por ele.
 
