feat: modifica a interface da gitpages

--- a/docs/Base/1.1.3.causa-efeito.md
+++ b/docs/Base/1.1.3.causa-efeito.md
@@ -16,9 +16,7 @@ Portanto, visando à compreensão da vicissitude definida, os dois integrantes d
 
 Figura 1 - Diagrama Causa-Efeito
 
-<p align="center">
-    <a href="assets/diagrama-causa-efeito.png"><img src="assets/diagrama-causa-efeito.png" alt="Diagrama Causa-Efeito" width="1000"/></a></br>
-</p>
+<img src="assets/diagrama-causa-efeito.png" alt="Diagrama Causa-Efeito" width="1000"/>
 
 <font>Fonte: [Arthur de Melo](https://github.com/arthurmlv) e [Douglas Alves](https://github.com/dougalvs), 2023</font>
 
@@ -31,7 +29,6 @@ Dado que grande parte da dificuldade para encontrar informações de uma mercado
 ## Referências Bibliográficas
 
 > 1. LINS, B. F. E. Ferramentas básicas da qualidade. Ciência da Informação, [S. l.], v. 22, n. 2, 1993. DOI: 10.18225/ci.inf.v22i2.502. Disponível em: https://revista.ibict.br/ciinf/article/view/502. Acesso em: 12 set. 2023.
-
 > 2. Diagrama de Ishikawa (Ferramenta da Qualidade): Teoria + Exemplo Prático. Disponível em: <https://youtu.be/U-0qzmFqH-0>. Acesso em: 12 set. 2023.
 
 ## Histórico de Versões
