feat: adiciona bpmn

--- a/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
+++ b/docs/Base/1.2.ProcessosMetodologiasAbordagens.md
@@ -4,7 +4,7 @@
 
 Conforme destacado por Sommerville (2018)[¹](#ancora1), o projeto de arquitetura desempenha um papel fundamental no desenvolvimento de software, atuando como o estágio inicial do processo. Nesse estágio são identificados os principais componentes estruturais do sistema e seus relacionamentos, resultando em um modelo de arquitetura que descreve como o sistema será organizado.
 
-A escolha metodológica nesse contexto é um fator crucial, pois influencia diretamente na forma como a arquitetura será projetada e implementada, podendo impactar significativamente na qualidade e no sucesso do projeto de software. Dessa forma, no seguinte projeto, serão adotados elementos das seguintes ferramentas e metodologias: Scrum, XP (Extreme Programming) e Conventional Commits.
+A escolha metodológica nesse contexto é um fator crucial, pois influencia diretamente na forma como a arquitetura será projetada e implementada, podendo impactar significativamente na qualidade e no sucesso do projeto de software. Dessa forma, no seguinte projeto, serão adotados elementos das seguintes ferramentas e metodologias: Scrum, XP (Extreme Programming), Conventional Commits e BPMN (Business Process Model And Notation).
 
 # Scrum
 
@@ -65,15 +65,21 @@ As branchs serão divididas em 3 tipos: feat, fix e refactor.
 - fix - branch que corrige algum problema ou erro existente no código.
 - refactor - branch que modifica elementos já existentes, mas não corrige e nem adiciona um novo recurso.
 
+# BPMN (Business Process Model and Notation)
+
+O BPMN é uma ferramenta gráfica que é utilizada para expressar os processos de negócio em forma de diagramas. Seu principal objetivo é fornecer suporte ao gerenciamento de processo de negócio. Todas as especificações e detalhamentos do BPMN para o seguinte projeto podem ser encontrados [aqui](./1.Base.md/1.1.x.modelagem-bpmn.md).
+
 # Bibliografia
 
 > <a id="ancora1"></a> 1. SOMMERVILLE, I. Software engineering. 10. ed. [s.l.] Boston, Mass. Amsterdam Cape Town Pearson Education Limited, 2016.  
 > <a id="ancora2"></a> 2. CRUZ, F. Scrum e PMBOK unidos no Gerenciamento de Projetos. [s.l.] Brasport, [s.d.].  
 > <a id="ancora3"></a> 3. VINÍCIUS MANHÃES TELES. Extreme Programming. [s.l.] Novatec Editora, 2017.  
-> <a id="ancora4"></a> 4. CONVENTIONAL Commits. Conventional Commits. Disponível em: <https://www.conventionalcommits.org/pt-br/v1.0.0/#especificação/>. Acesso em: 15 set. 2021.
+> <a id="ancora4"></a> 4. CONVENTIONAL Commits. Conventional Commits. Disponível em: <https://www.conventionalcommits.org/pt-br/v1.0.0/#especificação/>. Acesso em: 15 set. 2023.  
+> <a id="ancora5"></a> 5. BPMN (Business Process Model and Notation). Universidade de Brasília (UNB). Disponível em: <https://www.dpo.unb.br/images/phocadownload/dpr/biblioteca/BPMN.pdf>. Acesso em: 15 set. 2023.
 
 # Histórico de Versões
 
 | Versão | Data       | Descrição            | Autor(es)                                           | Revisor(es) |
 | ------ | ---------- | -------------------- | --------------------------------------------------- | ----------- |
 | `1.0`  | 15/09/2023 | Criação do documento | [Maciel Júnior](https://github.com/macieljuniormax) |             |
+| `1.1`  | 15/09/2023 | Adição do BPMN | [Débora Caires](https://github.com/deboracaires) |             |
