--- a/docs/Base/1.3.MapaMental.md
+++ b/docs/Base/1.3.MapaMental.md
@@ -3,6 +3,8 @@
 ## Introdução
 O mapa mental é um arefato que serve de auxílio na organização e representação de informações de forma clara e concisa. É uma representação gráfica de conceitos, ideias, tarefas e/ou informações interconectadas. 
 
+
+## Metodologia
 Para o projeto, o uso do mapa mental é importante para a análise dos diferentes processos e fluxos da Magazine Luiza. Em alguns pontos podemos destacar que os benefícios são:
 
 <blockquote>
@@ -19,8 +21,13 @@ Para o projeto, o uso do mapa mental é importante para a análise dos diferente
 
 De forma geral, o mapa mental é uma ferramenta flexível que permite a toda a equipe a identificação e análise dos fluxos existentes, abrindo caminho para futuras melhorias nos processos.
 
-## Metodologia
-Para a relização do mapa mental, primiero foi definido um fluxo geral para posteriormente cada integrante dar opiniões e assim o mapa mental ir ganhando forma e corpo.
+Para a relização do mapa mental, fizemos uma sessão de branstorming idealizando os fluxos para o perfil do cliente comprador, aquele que possui o objetivo de compra. Após a sessão, o mapa mental foi construído a partir das ideias capturadas na mesma. Feito isso, o olhar foi direcionado ao site para validar tais fluxos e agregar possíveis melhorias, nesse olhar foi possível identificar três problemas que são:
+
+* Dificuldade do usuário de encontrar o produto desejado;
+* Falta de atendimento online ao cliente e
+* Desempenho lento do site.
+
+A longo prazo, o problema idenficado foi **dificuldade do usuário de encontrar o produto desejado**, esse será o problema tratado pela equipe ao decorrer da disciplina. O problema a curto prazo estará detalhado no artefato [5W2H)]() e também estará presente na [Design Sprint]().
 
 ## Participantes
 
@@ -34,9 +41,11 @@ Para a relização do mapa mental, primiero foi definido um fluxo geral para pos
 ## Referências Bibliográficas
 > O que é um mapa mental e como fazer. Lucidchart. [https://www.lucidchart.com/pages/pt/o-que-e-mapa-mental-e-como-fazer](https://www.lucidchart.com/pages/pt/o-que-e-mapa-mental-e-como-fazer). Acesso em da: 11 de setembro de 2023.
 
+> SERRANO M., Material da aula: "PROJETO E DESENHO DE SOFTWARE", disponível na plataforma Aprender3. Acesso em 15/09/2023.
+
 ## Histórico de Versões
 | Versão   | Descrição  | Responsável | Revisor    | Data      |
 |----------|------------|-------------|------------|-----------|
 | 1.0      | Criação da página   | [Geovanna Maciel](https://github.com/manuziny)   | [Matheus Henrique](https://github.com/mathonaut)      | 10/09/2023 |
 | 1.1      | Adição do mapa mental | [Geovanna Maciel](https://github.com/manuziny) | [Matheus Henrique](https://github.com/mathonaut) | 13/09/2023 |
-
+| 1.2 | Detalhamento da metodologia e ligando artefatos | [Geovanna Maciel](https://github.com/manuziny) | [Matheus Henrique](https://github.com/mathonaut) | 15/09/2023 | 
