adicao rich defifinito

--- a/docs/Base/1.4.RichPicture.md
+++ b/docs/Base/1.4.RichPicture.md
@@ -6,7 +6,6 @@ O Rich Picture é uma ferramenta visual que tem sido amplamente utilizada em div
 
 ## Participantes
 
-* [Débora Caires](https://github.com/deboracaires)
 * [Geovanna Maciel](https://github.com/manuziny)
 * [Hellen Fernanda](https://github.com/Hellen159)
 
@@ -25,9 +24,15 @@ Autor: Geovanna Maciel
 </div>
 
 ## Rich Picture Definido
+O rich picture definido foi escolhido a partir da análise das duas versões feitas anteriormente e o [Mapa Mental]() com seus fluxos. O artefato não abrangeu o problema idenficado no [Mapa Mental]() pois se trata de uma visão mais geral de como seriam os fluxos para o perfil de comprador. 
+
+![](\richPictureImagem\rich_picture_definitivo.jpg)
+<div style="text-align:center;">
+Autor: Geovanna Maciel
+</div>
 
 ## Referências Biblgráficas
-> Introducing Rich Pictures - Rich Picture Drawing Guidelines. Disponível em: https://aprender3.unb.br/pluginfile.php/2523045/mod_resource/content/2/1_5145791542719414573.pdf. Acessado em: 13 de setembro de 2023.
+> Introducing Rich Pictures - Rich Picture Drawing Guidelines. Disponível na plataforma Aprender3. Acessado em: 13 de setembro de 2023.
 
 ## Histórico de Versões
 | Versão   | Descrição  | Responsável | Revisor    | Data      |
