--- a/docs/Base/1.4.RichPicture.md
+++ b/docs/Base/1.4.RichPicture.md
@@ -40,3 +40,4 @@ Autor: Geovanna Maciel
 | 1.0      | Criação da página   | [Geovanna Maciel](https://github.com/manuziny)   | [Débora Caires](https://github.com/deboracaires)      | 10/09/2023|
 | 1.1      | Adicionando versão do rich picture   | [Hellen Fernanda](https://github.com/Hellen159)   | [Débora Caires](https://github.com/deboracaires)      | 11/09/2023|
 | 1.2      | Adicionando segunda versão do rich picture | [Geovanna Maciel](https://github.com/manuziny) | [Hellen Fernanda](https://github.com/Hellen159) | 13/09/2023 |
+| 1.3 | Adição rich picture definitivo | [Geovanna Maciel](https://github.com/manuziny) | [Douglas Alves](https://github.com/dougAlvs) | 15/09/2023
