--- a/docs/Base/1.1.AbordagemNaoEspecifica.md
+++ b/docs/Base/1.1.AbordagemNaoEspecifica.md
@@ -1,41 +1,84 @@
 # 1.1. Módulo Projeto Não Orientado a Abordagens Específicas
 
-Usando a lista de projetos indicados por grupo para o período letivo vigente (vide Projetos - Período), sendo uma lista de projetos já existentes e implementados, realizar Design Sprint para levantamento dos requisitos de uma possível evolução desse software.
+## Introdução
 
-Foco_1: Técnicas de Elicitação e Artefatos Independentes de Metodologia
+Nessa primeira etapa do trabalho, o grupo realizou a elaboração de alguns artefatos com o objetivo de definir metodologias de trabalho, entender melhor o escopo do projeto, o fluxo de trabalho abordado e identificar possíveis pontos de melhoria no sistema. Para isso, foram utilizadas as metodologias SCRUM e XP, melhores detalhadas no seguinte [artefato](), que apresenta uma descrição dos processos utilizados e sua modelagem BPMN, além de uma adaptação da design sprint, que será melhor explicada no presente documento.
 
-Entrega Mínima: Design Sprint, evidenciando 2 artefatos (ESCOPO: 5W2H; Mapa Mental; Diagrama Causa-Efeito; Rich Picture; Léxico (ou Glossário) ou Planos de Risco, Custo e Tempo).
+## Design Sprint
 
-Apresentação (em sala) explicando passo a passo a Design Sprint realizada, com: (i) rastro claro aos membros participantes (MOSTRAR QUADRO DE PARTICIPAÇÕES & COMMITS); (ii) justificativas & senso crítico sobre o trabalho realizado; (iii) breve apresentação dos 2 artefatos elaborados, e (iv) comentários gerais sobre o trabalho em equipe. Tempo da Apresentação: +/- 10min. Recomendação: Apresentar diretamente via Wiki ou GitPages do Projeto.
+A design sprint é um processo de 5 dias proposto pela Google Venture como uma maneira de responder questões críticas de negócio, isso se dá por meio do desenho, prototipagem e teste de ideias com clientes. Cada um dos dias da semana representa uma etapa desse processo, da seguinte forma:
 
-A Wiki ou GitPages do Projeto deve conter um tópico dedicado ao Módulo Projeto Não Orientado a Abordagens Específicas, com 2 artefatos, histórico de versões, referências, e demais detalhamentos gerados pela equipe nesse escopo.
+* Segunda (Unpack): é feito um panorama geral para a semana, se escolhe um desafio a ser superado a longo-prazo que é mapeado até se encontrar um objetivo que possa ser completado até o fim da semana.
+* Terça (Sketch): após se entender o problema na segunda, na terça o foco é no desenho de soluções. Os integrantes da equipe colaboram com seu ponto de vista para a criação de esboços da solução.
+* Quarta (Decision): aqui é feita a decisão de qual será a solução adotada dentre o catálogo elaborado na terça, logo após é elaborado um storyboard que servirá de passo a passo para o protótipo.
+* Quinta (Prototype): finalmente é feita a elaboração do protótipo que resolva o desafio escolhido no início da semana.
+* Sexta (Interview): por último, são feitos testes de usabilidade, por meio de entrevistas, para entender a eficiência do protótipo.
 
-Demais orientações disponíveis nas Diretrizes (vide Moodle).
+## Metodologia
 
-# Projetos - Período
+No contexto do projeto, uma adaptação da design sprint foi utilizada para guiar a construção de alguns artefatos e a subsequente solução de um dado problema. As etapas não seguiram o modelo de dias consecutivos de forma exata, mas sim etapas em que artefatos eram elaborados em conjunto com um determinado objetivo em mente. A divisão de cada passo foi a seguinte e esse mesmo fluxo também está representado na [Modelagem BPMN]():
 
-Segue a lista de projetos desse período letivo:
+### Unpack
 
-    • Aplicação Web Amazon.com,br
-    • Site: https://www.amazon.com.br/ 
-        ◦ Grupo 01: Amazon, Perfil Comprador, e fluxos compreendidos do cadastro na plataforma até visualização/compra/pagamento de produtos.
-            ▪ Nome do Repositório: 2023.2_G1_ProjetoAmazon
-        ◦ Grupo 02: Amazon, Perfil Comprador & Plataforma, e fluxos compreendidos nas avaliações dos produtos.
-            ▪ Nome do Repositório: 2023.2_G2_ProjetoAmazon
-        ◦ Grupo 03: Amazon, Perfil Comprador & Perfil Vendedor & Plataforma, e fluxos compreendidos em pedidos de reclamação, devolução e estornos de produtos e/ou valores.
-            ▪ Nome do Repositório: 2023.2_G3_ProjetoAmazon
-Fontes de Informação: principalmente, site & telas bem como políticas e informações divulgadas pela plataforma.
+Nessa primeira etapa, foi feita a elaboração de um [mapa mental]() para definição do escopo do projeto e identificação de possíveis obstáculos na utilização do sistema. Aqui foi definido um desafio a ser superado a longo prazo que é a "**dificuldade do usuário encontrar os produtos desejados**", após isso escolhemos uma pequena parte desse problema para buscar solucionar nesse ciclo da Design Sprint, que é a "**dificuldade de encontrar informações sobre um produto**". Logo após, foi feita a elaboração de [léxicos]() para ajudar a entender ainda melhor os conceitos inerentes ao ambiente do sistema e reconhecer os termos peculiares ao seu contexto social.
 
-    • Aplicação Web Americanas.com.br
-    • Site: https://www.americanas.com.br/
-        ◦ Grupo 04: Americanas, Perfil Comprador, e fluxos compreendidos do cadastro na plataforma até visualização/compra/pagamento de produtos.
-            ▪ Nome do Repositório: 2023.2_G4_ProjetoAmericanas
-        ◦ Grupo 05: Americanas, Perfil Comprador & Plataforma, e fluxos compreendidos nas avaliações dos produtos.
-            ▪ Nome do Repositório: 2023.2_G5_ProjetoAmericanas
-        ◦ Grupo 06: Americanas, Perfil Comprador & Plataforma, e fluxos compreendidos nas políticas de trocas e devoluções.
-            ▪ Nome do Repositório: 2023.2_G6_ProjetoAmericanas
-Fontes de Informação: principalmente, site & telas bem como políticas e informações divulgadas pela plataforma.
+Posteriormente, foi feita a elaboração de um [5W2H]() para detalhar melhor o problema da "**dificuldade de encontrar informações sobre um produto**" e começar a pensar em sua possível solução. Para finalizar essa etapa, foi traçado um [plano de risco e tempo]() para auxiliar a parte de gerenciamento do projeto, de maneira que se possa ter um planejamento maior da execução das etapas posteriores.
 
-OBS:
-    • Caso existam novos matriculados na disciplina, ou serão alocados em grupos já existentes (havendo disponibilidade de vagas), ou novos projetos serão propostos pela professora. Portanto, nesses casos, conversar com a professora na época.
-    
+### Sketch
+
+Nessa segunda etapa, foi construído um [diagrama causa-efeito]() com base no [5W2H](), de forma a identificar as possíveis causas do problema a ser solucionado. Em seguida, foram elaborados diferentes [rich pictures](), com distintos pontos de vista, que compreendem os fluxos idealizados no [mapa mental](), para que assim se possa ter esboços da solução.
+
+### Decision
+
+Aqui, o melhor [rich picture]() elaborado foi escolhido e transformado em um [storyboard]() que representa a solução do problema citado no [5W2H]() e que guiou o desenvolvimento do [protótipo]().
+
+### Prototype
+
+Nessa etapa, foi feita a elaboração do [protótipo]() com base no fluxo do [storyboard]().
+
+### Interview
+
+Por fim, o [protótipo]() foi válidado com um cliente por meio de um [teste de usabilidade]() em forma de entrevista.
+
+## Justificativa da escolha dos artefatos
+
+### [5W2H]()
+
+O método 5W2H representa uma valiosa ferramenta de gestão de qualidade, que se mostra altamente eficaz na análise e solução de problemas de maneira eficiente. Ele estabelece um estrutura para a coleta de informações relevantes e a construção de um modelo que facilita a clarificação das etapas práticas a serem tomadas, visando garantir uma resolução satisfatória. Esse método se fundamenta em sete perguntas-chave: "o que", "por quê", "onde", "quando", "quem", "como" e "quanto". Ao abordar cada uma destas perguntas, é possível descrever o problema com uma precisão notável, além de identificar as ações necessárias para resolvê-lo. O 5W2H se revela como uma ferramenta de simplicidade e acessibilidade notáveis, aplicável em diversos tipos de projetos. Ele simplifica a gestão, fomenta uma comunicação transparente e, assim, aprimora substancialmente as chances de êxito, uma vez que todos os envolvidos compartilham uma compreensão unificada dos objetivos e do escopo do projeto.
+
+### [Mapa Mental]()
+
+O uso de Mapas Mentais para o nosso projeto é justificado pela sua capacidade de visualizar informações complexas, ideias interconectadas e tarefas relacionadas de forma clara e organizada. Isso promove uma compreensão mais profunda e facilita o planejamento e a comunicação. 
+
+### [Diagrama Causa-Efeito]()
+
+O diagrama causa-efeito é uma ferramenta de gestão de qualidade que ajuda a identificar e analisar as causas subjacentes de um problema ou desafio. Ele organiza as informações de forma clara e visual, permitindo que a equipe identifique as principais áreas de impacto e as relações entre as variáveis. Isso é fundamental para a resolução eficaz de problemas e para melhorar processos. O diagrama causa-efeito é valioso para tomada de decisões informadas e implementação de soluções direcionadas, melhorando a eficiência e eficácia do projeto. Ele é uma ferramenta simples e acessível que pode ser usada em diferentes tipos de projetos.
+
+### [Rich Picture]()
+
+O uso de Rich Pictures para o nosso projeto é justificado pela sua capacidade de criar uma representação visual rica e detalhada de um contexto complexo, destacando aspectos relevantes, interações e stakeholders. O Rich Picture permite uma compreensão mais profunda do ambiente em que o projeto está inserido, identificando atores-chave e suas relações. Ele é uma ferramenta simples e acessível que pode ser usada em diferentes tipos de projetos.
+
+### [Léxicos]()
+
+Os artefatos "léxicos" foram escolhidos para o projeto porque são essenciais para a definição precisa e compartilhada da terminologia específica do projeto. Esse objeto evita malentendidos e ambiguidades na comunicação entre membros da equipe, parceiros e interessados. A criação de léxicos também ajuda a tornar a linguagem usada no projeto uniforme, tornando mais fácil para todos os envolvidos entender e usar os termos de maneira consistente. Isso é essencial para o sucesso geral do projeto e para a clareza e eficácia da comunicação.
+
+### [Planos de Risco e Tempo]()
+
+O uso de planos de Risco e Tempo no projeto é justificado pela necessidade de gerenciar de forma eficaz os elementos críticos de qualquer empreendimento. O plano de Risco ajuda a identificar, avaliar e mitigar potenciais problemas que podem afetar o projeto, reduzindo incertezas e impactos negativos. Enquanto isso, o plano de Tempo estabelece um cronograma claro, permitindo uma alocação eficiente de recursos e garantindo que o projeto seja concluído dentro do prazo estipulado. Ambos os planos são essenciais para minimizar contratempos e assegurar o sucesso geral do projeto.
+
+## Conclusão
+
+Ao longo deste trabalho, empregamos metodologias ágeis como SCRUM e XP, juntamente com uma adaptação do design sprint, para abordar e buscar solucionar um desafio específico em nosso projeto: a dificuldade do usuário em encontrar informações sobre um produto. Utilizamos uma variedade de ferramentas e técnicas para entender o problema, gerar soluções potenciais, tomar uma decisão informada sobre a melhor solução e criar um protótipo para testar sua eficácia. Continuaremos a aplicar essas abordagens à medida que avançamos no projeto, sempre com o objetivo de melhorar a experiência do usuário.
+
+## Bibliografia
+
+> GOOGLE VENTURES. The Design Sprint, 2023. Disponível em: <<http://www.gv.com/sprint/>>. Acesso em: 14/09/2023.
+> THE SPRINT BOOK. The Design Sprint, 2023. Disponível em: <<https://www.thesprintbook.com/the-design-sprint>>. Acesso em: 15/09/2023.
+> SERRANO M., Material da aula: "PROJETO E DESENHO DE SOFTWARE", disponível na plataforma Aprender3. Acesso em 15/09/2023.
+
+## Histórico de Versões
+
+| Versão | Data       | Descrição                                    | Autor(es)                                        | Revisor(es)                                      |
+| ------ | ---------- | -------------------------------------------- | ------------------------------------------------ | ------------------------------------------------ |
+| `1.0`  | 14/09/2023 | Criação da página da design sprint e introdução.    |  [Douglas Alves](https://github.com/dougalvs) |  [Arthur de Melo](https://github.com/arthurmlv) |
+| `1.1`  | 15/09/2023 | Adição do detalhamento metodológico, artefatos e conclusão.    |  [Douglas Alves](https://github.com/dougalvs) |  [Sidney Fernando](https://github.com/nando3d3) |
