Atualização na tabela de participação

--- a/docs/Base/1.3.ParticipacoesBase.md
+++ b/docs/Base/1.3.ParticipacoesBase.md
@@ -6,7 +6,7 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 
 | Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
 | -------------  | ------------ | ------------------------------------------------------------------------------ |
-| [Laura Pinos](https://github.com/laurapinos)              |  [5W2H](1.1.2.5W2H.md) |  |
+| [Laura Pinos](https://github.com/laurapinos)              |  [5W2H](1.1.2.5W2H.md) | Boa | 
 | [Hellen Fernanda](https://github.com/Hellen159)              |  [5W2H](1.1.2.5W2H.md) <br> [Rich Picture]()|  |
 | [Débora Caires](https://github.com/deboracaires)              |  [5W2H](1.1.2.5W2H.md) <br> [Rich Picture]() [Escolhas Metodológicas]()| |
 | [Arthur de Melo](https://github.com/arthurmlv)              | [Diagrama Causa-Efeito](1.1.3.causa-efeito.md) <br> [Léxicos](lexicos.md)| |
@@ -20,7 +20,7 @@ Breve relato sobre as participações/contribuições de cada membro à entrega.
 
 | Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) |
 | -------------  | ------------ | ------------------------------------------------------------------------------ |
-| [Laura Pinos](https://github.com/laurapinos)          | [Modelagem BPMN]() <br> [Escolhas Metodológicas]()     | |
+| [Laura Pinos](https://github.com/laurapinos)          | [Modelagem BPMN]() <br> [Escolhas Metodológicas]()     | Regular|
 | [Arthur de Melo](https://github.com/arthurmlv)        | [Modelagem BPMN]()      | |
 | [Douglas Alves](https://github.com/dougAlvs)          | [Modelagem BPMN]()      | |
 | [Sidney Fernando](https://github.com/nando3d3)        | [Modelagem BPMN]()      | Boa |
